--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,44 @@
   </head>
 
   <body>
+    <div class="buttons-wrapper">
+      <button id="theme-switch-light">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-listIcon">
+          <circle cx="12" cy="12" r="5"></circle>
+          <path
+            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
+          ></path>
+        </svg>
+        <span>Light</span>
+      </button>
+      <button id="theme-switch-dark">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-listIcon">
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+        </svg>
+        <div class="mask"></div>
+        <span>Dark</span>
+      </button>
+    </div>
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="header__logo">
+            <img src="img/logo.svg" alt="">
+          </div>
+          <nav class="header__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a class="nav__link" href="#">Портфолио</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Эксперты</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Цены</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Сделать заказ</a></li>
+            </ul>
+          </nav>
+          <button class="switch-theme-btn">
+            
+          </button>
+        </div>
+      </div>
+    </header>
     <div class="cases media">
       <div class="container">
         <div class="cases__buttons">
