--- a/app/index.html
+++ b/app/index.html
@@ -59,20 +59,59 @@
     </header>
     <div class="services">
       <div class="container">
-        <button class="to-bottom_left">
-
-        </button>
-        <button class="to-bottom_right">
-          
-        </button>
+        <a href="#" class="to-bottom_left">
+          <div class="arrows-dark">
+            <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+            <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+            <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+          </div>
+          <div class="arrows-light">
+            <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+            <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+            <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+          </div>
+        </a>
+        <a href="#" class="to-bottom_right">
+          <div class="arrows-wrapper">
+            <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+            <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+          </div>
+        </a>
         <h2 class="services__title">Работайте с экспертом лицом к лицу и забудьте о посредниках</h2>
         <div class="services__inner">
           <div class="services__item">
-            <p class="services__item-title"></p>
+            <p class="services__item-title">Маркетинг</p>
             <div class="services__item-content">
-              <a href="#" class="cervices__item-link">
-
+              <a href="#" class="services__item-link">
+                <img src="img/services/anatoly.jpg" alt="">
               </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Глеб</p>
+            </div>
+          </div>
+          <div class="services__item">
+            <p class="services__item-title">Продакшен</p>
+            <div class="services__item-content">
+              <a href="#" class="services__item-link">
+                <img src="img/services/gleb.jpg" alt="">
+              </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Анатолий</p>
+              <p class="services__name">Алена</p>
+            </div>
+          </div>
+          <div class="services__item">
+            <p class="services__item-title">Разработка</p>
+            <div class="services__item-content">
+              <a href="#" class="services__item-link">
+                <img src="img/services/anatoly.jpg" alt="">
+              </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Артем</p>
+              <p class="services__name">Миша</p>
             </div>
           </div>
         </div>
