--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,395 @@
         </div>
       </div>
     </div>
-    <div class="cases media">
+    <div class="portfolio">
+      <div class="container">
+        <div class="portfolio__tab-row">
+          <button class="portfolio__tab-btn">
+            Портфолио
+          </button>
+          <button class="portfolio__tab-btn">
+            Все кейсы
+          </button>
+        </div>
+        <div class="portfolio__filters-row">
+          <button class="portfolio__filters-btn">
+            Контекст
+          </button>
+          <button class="portfolio__filters-btn">
+            Таргет
+          </button>
+          <button class="portfolio__filters-btn">
+            Под ключ
+          </button>
+        </div>
+        <div class="portfolio__inner">
+          <div class="portfolio__item-row">
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio__item-row">
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <p class="portfolio__item-title">Лендинг жилого комплекса Akzent холдинга AAG</p>
+              <img class="portfolio__item-img" src="img/portfolio/item-img.jpg" alt="">
+              <div class="portfolio__item-info-wrapper">
+                <div class="portfolio__item-info">
+                  <div class="portfolio__item-info-img">
+                    <img src="img/portfolio/info.jpg" alt="">
+                  </div>
+                  <div class="info-list__wrapper">
+                    <div class="portfolio__item-info-list info-list">
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info1.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Савов Глеб</p>
+                          <p class="list-item__work">Настроил рекламу</p>
+                          <img class="list-item__text-img" src="img/portfolio/arrow.svg" alt="">
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info2.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Миша</p>
+                          <p class="list-item__work">Смонтировал клипы</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info3.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Азиат</p>
+                          <p class="list-item__work">Ел рис</p>
+                        </div>
+                      </div>
+                      <div class="info-list__item list-item">
+                        <div class="list-item__img">
+                          <img src="img/portfolio/info4.jpg" alt="">
+                        </div>
+                        <div class="list-item__text">
+                          <p class="list-item__name">Артем</p>
+                          <p class="list-item__work">Хочет тебя убить</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="industry">
+      <div class="container">
+        <div class="industry__inner">
+          <h2 class="industry__title">Отрасли, в которых мы разбираемся лучше всего
+          </h2>
+        <div class="industry__lists">
+          <ul class="industry__list industry__list-left">
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">01</span>
+                <p class="list-item__text">Грузоперевозки</p>
+              </div>
+              <span class="list-item__count">28 проектов</span>
+            </li>
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">02</span>
+                <p class="list-item__text">Недвижимость</p>
+              </div>
+              <span class="list-item__count">34 проекта</span>
+            </li>
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">03</span>
+                <p class="list-item__text">HoReCa</p>
+              </div>
+              <span class="list-item__count">21 проект</span>
+            </li>
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">04</span>
+                <p class="list-item__text">Бассейная индустрия</p>
+              </div>
+              <span class="list-item__count">4 проекта</span>
+            </li>
+            <li class="industry__list-item">
+              <div class="text-left">
+                <span class="list-item__number">05</span>
+                <p class="list-item__text">Косметология</p>
+              </div>
+              <span class="list-item__count">1 проект</span>
+            </li>
+          </ul>
+        </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="cases media">
       <div class="container">
         <div class="cases__buttons">
           <div class="cases-button tabs-navigation__item--active">Мини кейсы</div>
@@ -2290,7 +2678,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="js/main.min.js"></script>
   </body>
 </html>
