--- a/app/index.html
+++ b/app/index.html
@@ -505,6 +505,67 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
+          </h2>
+          <div class="footer__links">
+            <a href="#" class="footer__link">order@savov.ru</a>
+            <a href="#" class="footer__link">в telegram</a>
+            <a href="#" class="footer__link">в whatsapp</a>
+            <a href="tel:79006566903" class="footer__link">+7 900 656 69 03</a>
+          </div>
+        </div>
+        <div class="footer__form-wrapper">
+          <form action="" class="footer__form form">
+            <div class="form__inputs">
+              <input type="text" placeholder="Имя" class="form__input">
+              <input type="tel" placeholder="Телефон" class="form__input">
+              <input type="email" placeholder="Email" class="form__input">
+            </div>
+            <div class="form__buttons">
+              <label class="add-file-label" for="add-file">
+                прикрепить файл
+              </label>
+              <input id="add-file" type="file">
+                
+              </input>
+              <button class="download">
+                Скачать файл
+              </button>
+            </div>
+            <div class="form__bottom">
+              <button class="send-btn" type="submit">
+                Отправить
+              </button>
+              <p class="agreement">
+                Нажав на кнопку, соглашаюсь на обработку <a class="agreement-link" href="#">персональных данных</a>
+              </p>
+            </div>
+          </form>
+        </div>
+        <div class="footer__bottom">
+          <ul class="footer__nav">
+            <li class="footer__nav-item">
+              <a href="#">Портфолио</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#">Услуги</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#">Эксперты</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#">Опыт в нишах</a>
+            </li>
+          </ul>
+          <div class="footer__logo">
+            <img src="img/footer/logo.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- <div class="cases media">
       <div class="container">
         <div class="cases__buttons">
