--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="switch">
+    <div class="switch media">
       <div class="buttons-wrapper">
         <button id="theme-switch-light">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-listIcon">
@@ -30,7 +30,7 @@
         </button>
       </div>
     </div>
-    <header class="header">
+    <header class="header media">
       <div class="container">
         <div class="header__top">
           <div class="header__logo">
@@ -39,6 +39,11 @@
               <img class="header__logo_light" src="img/header/logo-light.svg" alt="Логотип">
             </a>
           </div>
+          <button class="nav-mobile-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <nav class="header__nav nav">
             <ul class="nav__list">
               <li class="nav__item"><a class="nav__link" href="#">Портфолио</a></li>
@@ -57,7 +62,7 @@
         </ht>
       </div>
     </header>
-    <div class="services">
+    <!-- <div class="services">
       <div class="container">
         <a href="#" class="to-bottom_left">
           <div class="arrows-dark">
@@ -557,7 +562,7 @@
               <a href="#">Эксперты</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#">Опыт в нишах</a>
+              <a href="#">Цены</a>
             </li>
           </ul>
           <div class="footer__logo">
@@ -565,7 +570,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- <div class="cases media">
       <div class="container">
         <div class="cases__buttons">
