--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
         </ht>
       </div>
     </header>
-    <!-- <div class="services">
+    <div class="services media">
       <div class="container">
         <a href="#" class="to-bottom_left">
           <div class="arrows-dark">
@@ -120,9 +120,48 @@
             </div>
           </div>
         </div>
+        <div class="services__inner-mobile">
+          <div class="services__tabs">
+            <div class="services__tab">Маркетинг</div>
+            <div class="services__tab">Продакшен</div>
+            <div class="services__tab">Разработка</div>
+          </div>
+          <div class="services__item">
+            <div class="services__item-content">
+              <a href="#" class="services__item-link">
+                <img src="img/services/anatoly.jpg" alt="">
+              </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Глеб</p>
+            </div>
+          </div>
+          <div class="services__item">
+            <div class="services__item-content">
+              <a href="#" class="services__item-link">
+                <img src="img/services/gleb.jpg" alt="">
+              </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Анатолий</p>
+              <p class="services__name">Алена</p>
+            </div>
+          </div>
+          <div class="services__item">
+            <div class="services__item-content">
+              <a href="#" class="services__item-link">
+                <img src="img/services/anatoly.jpg" alt="">
+              </a>
+            </div>
+            <div class="services__names">
+              <p class="services__name">Артем</p>
+              <p class="services__name">Миша</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="portfolio">
+    <!--<div class="portfolio">
       <div class="container">
         <div class="portfolio__tab-row">
           <button class="portfolio__tab-btn">
