--- a/app/index.html
+++ b/app/index.html
@@ -16,14 +16,14 @@
   <body>
     <div class="switch media">
       <div class="buttons-wrapper">
-        <button id="theme-switch-light">
+        <button id="theme-switch-dark">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-listIcon">
             <circle cx="12" cy="12" r="5"></circle>
             <path
               d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"></path>
           </svg>
         </button>
-        <button id="theme-switch-dark">
+        <button id="theme-switch-light">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="sidebar-listIcon">
             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
           </svg>
@@ -1138,7 +1138,7 @@
         </div>
       </div>
     </div>
-    <!--<div class="industry">
+    <div class="industry media">
       <div class="container">
         <div class="industry__inner">
           <h2 class="industry__title">Отрасли, в которых мы разбираемся лучше всего
@@ -1185,16 +1185,20 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer media">
       <div class="container">
         <div class="footer__inner">
           <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
           </h2>
           <div class="footer__links">
-            <a href="#" class="footer__link">order@savov.ru</a>
-            <a href="#" class="footer__link">в telegram</a>
-            <a href="#" class="footer__link">в whatsapp</a>
-            <a href="tel:79006566903" class="footer__link">+7 900 656 69 03</a>
+            <div class="footer__links-row">
+              <a href="#" class="footer__link">order@savov.ru</a>
+              <a href="#" class="footer__link">в telegram</a>
+            </div>
+            <div class="footer__links-row">
+              <a href="#" class="footer__link">в whatsapp</a>
+              <a href="tel:79006566903" class="footer__link">+7 900 656 69 03</a>
+            </div>
           </div>
         </div>
         <div class="footer__form-wrapper">
@@ -1245,7 +1249,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="cases media">
       <div class="container">
         <div class="cases__buttons">
