--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
           </button>
           <nav class="header__nav nav">
             <ul class="nav__list">
-              <li class="nav__item"><a class="nav__link" href="#">Портфолио</a></li>
+              <li class="nav__item"><a class="nav__link" href="#portfolio">Портфолио</a></li>
               <li class="nav__item"><a class="nav__link" href="#">Эксперты</a></li>
               <li class="nav__item"><a class="nav__link" href="#">Цены</a></li>
               <li class="nav__item"><a class="nav__link" href="#">Сделать заказ</a></li>
@@ -161,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio media">
+    <div id="portfolio" class="portfolio media">
       <div class="container">
         <div class="portfolio__tab-row">
           <button class="portfolio__tab-btn">
@@ -3356,6 +3356,147 @@
             </li>
           </ul>
         </div>
+        </div>
+      </div>
+    </div>
+    <div class="sertificats">
+      <div class="container">
+        <h2 class="sertificats__title">Сертификаты</h2>
+        <div class="sertificats__inner">
+          <p class="sertificats__descr">
+            Наши сотрудники имеют сертификаты Яндекс Директ
+          </p>
+          <div class="sertificats__img-wrapper">
+            <div class="sertificats__img btn" data-path="sertificat-popup">
+              <img src="img/sertificats/sertificat.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="prices">
+      <div class="container">
+        <h2 class="prices__title">Цены</h2>
+        <div class="prices__inner">
+          <div class="prices__row">
+            <div class="prices__item">
+              <p class="prices__item-title">
+                Лайт
+              </p>
+              <ul class="prices__list">
+                <li class="prices__list-item">
+                  До 100 запросов
+                </li>
+                <li class="prices__list-item">
+                  Запуск за 2 дня
+                </li>
+                <li class="prices__list-item">
+                  Отчетность 1/14
+                </li>
+                <li class="prices__list-item">
+                  Ведение 30 дней
+                </li>
+              </ul>
+              <div class="prices__price">
+                <span>&#8381;</span><span class="price">15 000</span>
+              </div>
+              <button class="prises__btn">Приобрести</button>
+            </div>
+            <div class="prices__item">
+              <p class="prices__item-title">
+                Универсальное решение
+              </p>
+              <ul class="prices__list">
+                <li class="prices__list-item">
+                  500 + запросов
+                </li>
+                <li class="prices__list-item">
+                  Запуск за 10 дней
+                </li>
+                <li class="prices__list-item">
+                  Отчетность 1/7
+                </li>
+                <li class="prices__list-item">
+                  Ведение 30 дней
+                </li>
+              </ul>
+              <div class="prices__price">
+                <span>&#8381;</span><span class="price">30 000</span>
+              </div>
+              <button class="prises__btn">Приобрести</button>
+            </div>
+          </div>
+          <div class="prices__row">
+            <div class="prices__item">
+              <p class="prices__item-title">
+                Премиум
+              </p>
+              <ul class="prices__list">
+                <li class="prices__list-item">
+                  1000 + запросов
+                </li>
+                <li class="prices__list-item">
+                  Запуск за 10 дней
+                </li>
+                <li class="prices__list-item">
+                  Отчетность 1/7
+                </li>
+                <li class="prices__list-item">
+                  А/Б тестирование
+                </li>
+                <li class="prices__list-item">
+                  Ведение 30 дней
+                </li>
+              </ul>
+              <div class="prices__price">
+                <span>&#8381;</span><span class="price">45 000</span>
+              </div>
+              <button class="prises__btn">Приобрести</button>
+            </div>
+            <div class="prices__item">
+              <p class="prices__item-title">
+                Экспресс
+              </p>
+              <ul class="prices__list">
+                <li class="prices__list-item">
+                  До 100 запросов
+                </li>
+                <li class="prices__list-item">
+                  Запуск за 2 дня
+                </li>
+                <li class="prices__list-item">
+                  Без возможности правок
+                </li>
+              </ul>
+              <div class="prices__price">
+                <span>&#8381;</span><span class="price">10 000</span>
+              </div>
+              <button class="prises__btn">Приобрести</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modals">
+      <div class="modal-overlay">
+        <div class="modal modal--1" data-target="sertificat-popup">
+          <img src="img/sertificats/sertificat-modal.png" alt="Сертификат">
+          <div class="modal__bottom">
+            <h2 class="modal__title">
+              Content Oriented Web
+            </h2>
+            <p class="modal__text">
+              Make great presentations, longreads, and landing pages, as well as photo stories, blogs, lookbooks, and all other kinds of content oriented projects.
+            </p>
+            <div class="modal__icons">
+              <a href="#" class="modal__icon">
+
+              </a>
+              <a href="#" class="modal__icon">
+                
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
