--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
       </div>
     </div>
     <header class="header media">
+      <img src="img/header/header-bg.svg" alt="" class="header__bg">
       <div class="container">
         <div class="header__top">
           <div class="header__logo">
@@ -57,12 +58,32 @@
             
           </button>
         </div>
-        <ht class="header__title">
-          Первое в России <br> Face-to-Face агенство
-        </ht>
+        <h1 class="header__title">
+          SAVOV<br> DIGITAL-АГЕНТСТВО<br>ПОЛНОГО ЦИКЛА
+        </h1>
+        <div class="header__to-bottom">
+          <a href="#portfolio" class="to-bottom_left">
+            <div class="arrows-dark">
+              <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+              <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+              <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+            </div>
+            <div class="arrows-light">
+              <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+              <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+              <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+            </div>
+          </a>
+          <a href="#portfolio" class="to-bottom_right">
+            <div class="arrows-wrapper">
+              <img class="arrow-dark" src="img/svg/arrow-bottom-dark.svg" alt="">
+              <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
+            </div>
+          </a>
+        </div>
       </div>
     </header>
-    <div class="services media">
+    <!-- <div class="services media">
       <div class="container">
         <a href="#marketing" class="to-bottom_left">
           <div class="arrows-dark">
@@ -160,7 +181,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div id="portfolio" class="portfolio media">
       <div class="container">
         <div class="portfolio__tab-row">
