--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,14 @@
         </div>
       </div>
     </header>
+    <div class="services-new">
+      <img class="services-new__img" src="img/services-new/bg.svg" alt="">
+      <div class="services-new__inner">
+        <div class="services-new__item"><span>Сайты</span><span>Сайты</span></div>
+        <div class="services-new__item"><span>Реклама</span><span>Реклама</span></div>
+        <div class="services-new__item"><span>Контент</span><span>Контент</span></div>
+      </div>
+    </div>
     <!-- <div class="services media">
       <div class="container">
         <a href="#marketing" class="to-bottom_left">
