--- a/app/index.html
+++ b/app/index.html
@@ -3388,6 +3388,67 @@
         </div>
       </div>
     </div>
+    <div class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__inner">
+          <div class="reviews__column">
+            <div class="reviews__item btn-video" data-path="review-popup-1">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+            <div class="reviews__item btn-video" data-path="review-popup-2">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+          </div>
+          <div class="reviews__column">
+            <div class="reviews__item">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+            <div class="reviews__item">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+          </div>
+          <div class="reviews__column">
+            <div class="reviews__item">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+            <div class="reviews__item">
+              <div class="reviews__item-img">
+                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+              </div>
+              <p class="reviews__item-title">
+                Компания "АкваИнжиниринг"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="sertificats">
       <div class="container">
         <h2 class="sertificats__title">Сертификаты</h2>
@@ -3429,7 +3490,7 @@
               <div class="prices__price">
                 <span>&#8381;</span><span class="price">15 000</span>
               </div>
-              <button class="prises__btn">Приобрести</button>
+              <button class="prices__btn">Приобрести</button>
             </div>
             <div class="prices__item">
               <p class="prices__item-title">
@@ -3452,7 +3513,7 @@
               <div class="prices__price">
                 <span>&#8381;</span><span class="price">30 000</span>
               </div>
-              <button class="prises__btn">Приобрести</button>
+              <button class="prices__btn">Приобрести</button>
             </div>
           </div>
           <div class="prices__row">
@@ -3480,7 +3541,7 @@
               <div class="prices__price">
                 <span>&#8381;</span><span class="price">45 000</span>
               </div>
-              <button class="prises__btn">Приобрести</button>
+              <button class="prices__btn">Приобрести</button>
             </div>
             <div class="prices__item">
               <p class="prices__item-title">
@@ -3500,32 +3561,42 @@
               <div class="prices__price">
                 <span>&#8381;</span><span class="price">10 000</span>
               </div>
-              <button class="prises__btn">Приобрести</button>
+              <button class="prices__btn">Приобрести</button>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="modals">
-      <div class="modal-overlay">
-        <div class="modal modal--1" data-target="sertificat-popup">
+      <div class="modal-overlay-sertificat">
+        <div class="modal modal__sertificat" data-target="sertificat-popup">
           <img src="img/sertificats/sertificat-modal.png" alt="Сертификат">
-          <div class="modal__bottom">
-            <h2 class="modal__title">
+          <div class="modal__sertificat-bottom">
+            <h2 class="modal__sertificat-title">
               Content Oriented Web
             </h2>
-            <p class="modal__text">
+            <p class="modal__sertificat-text">
               Make great presentations, longreads, and landing pages, as well as photo stories, blogs, lookbooks, and all other kinds of content oriented projects.
             </p>
-            <div class="modal__icons">
-              <a href="#" class="modal__icon">
+            <div class="modal__sertificat-icons">
+              <a href="#" class="modal__sertificat-icon">
 
               </a>
-              <a href="#" class="modal__icon">
+              <a href="#" class="modal__sertificat-icon">
                 
               </a>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="modal-overlay-video">
+        <div class="modal__video" data-target="review-popup-1">
+            <iframe src="https://www.youtube.com/embed/I1cmVFdgca4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="modal-overlay-video">
+        <div class="modal__video" data-target="review-popup-2">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/tsNu2IFyZgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
