--- a/app/index.html
+++ b/app/index.html
@@ -3391,61 +3391,78 @@
     <div class="reviews">
       <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
-        <div class="reviews__inner">
-          <div class="reviews__column">
-            <div class="reviews__item btn-video" data-path="review-popup-1">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+        <div class="reviews__inners">
+          <div class="reviews__inner">
+            <div class="reviews__column">
+              <div class="reviews__item btn-video" data-path="review-popup-1">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
               </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
+              <div class="reviews__item btn-video" data-path="review-popup-2">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
+              </div>
             </div>
-            <div class="reviews__item btn-video" data-path="review-popup-2">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+            <div class="reviews__column">
+              <div class="reviews__item">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
               </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
+              <div class="reviews__item">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
+              </div>
+            </div>
+            <div class="reviews__column">
+              <div class="reviews__item">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
+              </div>
+              <div class="reviews__item">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
+              </div>
             </div>
           </div>
-          <div class="reviews__column">
-            <div class="reviews__item">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+          <div class="reviews__inner reviews_hide hide">
+            <div class="reviews__column">
+              <div class="reviews__item">
+                <div class="reviews__item-img">
+                  <img src="img/reviews/1.jpg" alt="" class="reviews__img">
+                </div>
+                <p class="reviews__item-title">
+                  Компания "АкваИнжиниринг"
+                </p>
               </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
-            </div>
-            <div class="reviews__item">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
-              </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
             </div>
           </div>
-          <div class="reviews__column">
-            <div class="reviews__item">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
-              </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
-            </div>
-            <div class="reviews__item">
-              <div class="reviews__item-img">
-                <img src="img/reviews/1.jpg" alt="" class="reviews__img">
-              </div>
-              <p class="reviews__item-title">
-                Компания "АкваИнжиниринг"
-              </p>
-            </div>
-          </div>
+        </div>
+        <div class="btn-wrapper">
+          <button class="reviews__more-btn">Показать ещё</button>
         </div>
       </div>
     </div>
