--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,12 @@
               <li class="nav__item"><a class="nav__link phone" href="tel:+79006566903">+7 900 656 69 03</a></li>
             </ul>
           </nav>
+          <nav class="header__links">
+            <a class="link-phone" href="tel:+79006566903">+7 900 656 69 03</a>
+            <a href="#footer" class="request-btn">
+              Заявка
+            </a>
+          </nav>
           <button class="switch-theme-btn">
             
           </button>
@@ -80,10 +86,15 @@
               <img class="arrow-light" src="img/svg/arrow-bottom-light.svg" alt="">
             </div>
           </a>
+          <div class="header__services">
+            <div class="header__service">Контекстная, таргетированная и медийная реклама</div>
+            <div class="header__service">Диджитал-стратегия</div>
+            <div class="header__service">SMM</div>
+          </div>
         </div>
       </div>
     </header>
-    <div class="services-new">
+    <div class="services-new" id="portfolio">
       <img class="services-new__img" src="img/services-new/bg.svg" alt="">
       <div class="services-new__inner">
         <div class="services-new__item"><span>Сайты</span><span>Сайты</span></div>
@@ -190,7 +201,7 @@
         </div>
       </div>
     </div> -->
-    <div id="portfolio" class="portfolio media">
+    <!-- <div id="portfolio" class="portfolio media">
       <div class="container">
         <div class="portfolio__tab-row">
           <button class="portfolio__tab-btn">
@@ -1169,7 +1180,6 @@
         </div>
         <div class="portfolio-tab_ portfolio--active">
           <div class="cases media">
-            <!-- <div class="container"> -->
               <div class="cases__tabs">
                 <div class="cases__tab tab--active">
                   <div class="cases__tab-filters tab-filters">
@@ -3336,12 +3346,11 @@
                   </div>
                 </div>
               </div>
-            <!-- </div> -->
           </div>
         </div>
       </div>
-    </div>
-    <div class="industry media">
+    </div> -->
+    <!-- <div class="industry media">
       <div class="container">
         <div class="industry__inner">
           <h2 class="industry__title">Отрасли, в которых мы разбираемся лучше всего
@@ -3387,8 +3396,8 @@
         </div>
         </div>
       </div>
-    </div>
-    <div class="reviews">
+    </div> -->
+    <!-- <div class="reviews">
       <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
         <div class="reviews__inners">
@@ -3465,8 +3474,8 @@
           <button class="reviews__more-btn">Показать ещё</button>
         </div>
       </div>
-    </div>
-    <div class="sertificats">
+    </div> -->
+    <!-- <div class="sertificats">
       <div class="container">
         <h2 class="sertificats__title">Сертификаты</h2>
         <div class="sertificats__inner">
@@ -3480,8 +3489,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="prices">
+    </div> -->
+    <!-- <div class="prices">
       <div class="container">
         <h2 class="prices__title">Цены</h2>
         <div class="prices__inner">
@@ -3583,8 +3592,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="modals">
+    </div> -->
+    <!-- <div class="modals">
       <div class="modal-overlay-sertificat">
         <div class="modal modal__sertificat" data-target="sertificat-popup">
           <img src="img/sertificats/sertificat-modal.png" alt="Сертификат">
@@ -3616,8 +3625,8 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/tsNu2IFyZgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
-    </div>
-    <footer class="footer media">
+    </div> -->
+    <!-- <footer class="footer media" id="footer">
       <div class="container">
         <div class="footer__inner">
           <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
@@ -3681,7 +3690,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="js/main.min.js"></script>
   </body>
 </html>
